Add msinttypes on vc9

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,7 @@ requirements:
     - libuuid  # [unix]
     - pcre
     - zeromq
+    - msinttypes  # [win and vc<14]
     - vc  # [win and vc<14]
   run:
     - zeromq
