--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015.yaml
@@ -3,10 +3,11 @@ c_compiler:
 cxx_compiler:
 - vs2015
 pin_run_as_build:
-  zeromq:
-    max_pin: x.x.x
-zeromq:
-- 4.2.1
+  vc:
+    max_pin: x
+vc:
+- '14'
 zip_keys:
-- - c_compiler
+- - vc
+  - c_compiler
   - cxx_compiler
