MNT: Re-rendered with conda-smithy 3.1.6 and pinning 2018.07.15

--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008vc9.yaml
@@ -5,8 +5,12 @@ cxx_compiler:
 pin_run_as_build:
   vc:
     max_pin: x
+  zeromq:
+    max_pin: x.x
 vc:
 - '9'
+zeromq:
+- '>=4.2.5,<4.3'
 zip_keys:
 - - vc
   - c_compiler
