--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -4,6 +4,6 @@ cxx_compiler:
 - toolchain_cxx
 pin_run_as_build:
   zeromq:
-    max_pin: x.x.x
+    max_pin: x.x
 zeromq:
-- 4.2.1
+- '>=4.2.5,<4.3'
