--- a/.ci_support/win_c_compilervs2008cxx_compilervs2008.yaml
+++ b/.ci_support/win_c_compilervs2008cxx_compilervs2008.yaml
@@ -1,17 +1,12 @@
 c_compiler:
-- vs2015
+- vs2008
 cxx_compiler:
-- vs2015
+- vs2008
 pin_run_as_build:
-  vc:
-    max_pin: x
   zeromq:
     max_pin: x.x
-vc:
-- '14'
 zeromq:
 - '>=4.2.5,<4.3'
 zip_keys:
-- - vc
-  - c_compiler
+- - c_compiler
   - cxx_compiler
