--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015.yaml
@@ -1,17 +1,12 @@
 c_compiler:
-- vs2008
+- vs2015
 cxx_compiler:
-- vs2008
+- vs2015
 pin_run_as_build:
-  vc:
-    max_pin: x
   zeromq:
     max_pin: x.x
-vc:
-- '9'
 zeromq:
 - '>=4.2.5,<4.3'
 zip_keys:
-- - vc
-  - c_compiler
+- - c_compiler
   - cxx_compiler
