Try using msinttypes with __STDC_LIMIT_MACROS defined

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     - pkg-config  # [unix]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    - msinttypes  # [win and vc<14]
   host:
     - libuuid  # [unix]
     - pcre
