--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,8 +14,8 @@ source:
     - missing_stdint_zeromq.patch  # [win and vc<14]
 
 build:
-  number: 1
-  skip: true  # [vc<14]
+  number: 2
+  skip: true  # [win and vc<14]
 
 requirements:
   build:
