--- a/.ci_support/linux_.yaml
+++ b/.ci_support/linux_.yaml
@@ -2,8 +2,12 @@ c_compiler:
 - toolchain_c
 cxx_compiler:
 - toolchain_cxx
+libuuid:
+- 2.32.1
 pin_run_as_build:
+  libuuid:
+    max_pin: x
   zeromq:
     max_pin: x.x
 zeromq:
-- '>=4.2.5,<4.3'
+- 4.2.5
