--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -4,12 +4,16 @@ c_compiler:
 - toolchain_c
 cxx_compiler:
 - toolchain_cxx
+libuuid:
+- 2.32.1
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 pin_run_as_build:
+  libuuid:
+    max_pin: x
   zeromq:
     max_pin: x.x
 zeromq:
-- '>=4.2.5,<4.3'
+- 4.2.5
