--- a/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
+++ b/.ci_support/win_c_compilervs2015cxx_compilervs2015vc14.yaml
@@ -12,11 +12,11 @@ pin_run_as_build:
   vc:
     max_pin: x
   zeromq:
-    max_pin: x.x
+    max_pin: x.x.x
 vc:
 - '14'
 zeromq:
-- 4.3.1
+- 4.3.2
 zip_keys:
 - - vc
   - c_compiler
