--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,6 +12,7 @@ source:
   patches:
     - libzmq2zeromq.patch
     - missing_stdint_zeromq.patch  # [win and vc<14]
+    - 0001-zarmour.patch
 
 build:
   number: 2
