--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,10 @@ source:
     - 0001-cmake-libzmq-to-zeromq.patch
     - 0002-stdint-missing-from-zeromq.patch  # [win and vc<14]
     - 0003-bug-on-macos.patch
+    - 0004-debug-flaky-zpoller-test.patch
 
 build:
-  number: 1
+  number: 2
   skip: true  # [win and vc<14]
 
 requirements:
