Only patch zpoller on windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     - 0001-cmake-libzmq-to-zeromq.patch
     - 0002-stdint-missing-from-zeromq.patch  # [win and vc<14]
     - 0003-bug-on-macos.patch
-    - 0004-debug-flaky-zpoller-test.patch
+    - 0004-debug-flaky-zpoller-test.patch  # [win]
 
 build:
   number: 2
